# aoc-2020

./: LICENSE  README.md  pyproject.toml
src/day_1/puzzle_1/: solution.py
src/day_10/: solution.py
src/day_11/: solution.py
src/day_12/: first_solution.py  second_solution.py  solution.py
src/day_2/: solution.py
src/day_3/: solution.py
src/day_4/: solution.py
src/day_5/: solution.py
src/day_6/: solution.py
src/day_7/: solution.py
src/day_8/: solution.py
src/day_9/: solution.py
