[tool.poetry]
name = "aoc-2020"
version = "0.1.0"
description = "Attempts at solving Advent of Code 2020"
authors = ["Armand Adroher <aadroher@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
